creates nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -41,3 +41,7 @@
     -->
   </body>
 </html>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+
